CI heroku second try

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
 deploy:
   provider: script
   script: docker login -u $HEROKU_EMAIL -p $HEROKU_PASSWORD registry.heroku.com
-    docker build -t registry.heroku.com/rocky-bayou-95129/web
+    docker build registry.heroku.com/rocky-bayou-95129/web
     docker push registry.heroku.com/rocky-bayou-95129/web
