--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_deploy:
   - docker login --username=$HEROKU_EMAIL --password=$HEROKU_PASSWORD registry.heroku.com
 
 script:
-  - docker build .
+  - docker build -t web .
 
 deploy:
   provider: script
