--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 before_install:
   #   - docker build -t yadhus/docker-simple -f Dockerfile.dev .
   - curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
-  - echo "$HEROKU_PASSWORD" | docker login --username="$HEROKU_USERNAME" --password-stdin registry.heroku.com
+  - echo $HEROKU_PASSWORD | docker login --username=$HEROKU_USERNAME --password-stdin registry.heroku.com
 
 # script:
 #   - docker run -e CI=true yadhus/docker-simple npm run test
