--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,10 @@ before_install:
 script:
   - docker build -t yadhus/docker-simple .
   - docker tag yadhus/docker-simple registry.heroku.com/rocky-bayou-95129/web
+  - docker push registry.heroku.com/rocky-bayou-95129/web
 
 deploy:
   provider: script
-  script: >-
-    docker push registry.heroku.com/rocky-bayou-95129/web
-    heroku container:release web -app rocky-bayou-95129
+  script: heroku container:release web --app rocky-bayou-95129
   on:
     branch: master
