--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
 #   - docker run -e CI=true yadhus/docker-simple npm run test
 
 script:
-  - docker build -t yadhus/docker-simple .
-  - docker tag yadhus/docker-simple registry.heroku.com/rocky-bayou-95129/web
+  - docker build -t registry.heroku.com/rocky-bayou-95129/web .
+  # - docker tag yadhus/docker-simple registry.heroku.com/rocky-bayou-95129/web
   - docker push registry.heroku.com/rocky-bayou-95129/web
 
 deploy:
