--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ script:
 
 deploy:
   provider: script
-  script: docker run --rm -e HEROKU_API_KEY=$HEROKU_PASSWORD registry.heroku.com/rocky-bayou-95129/web container:release web --app rocky-bayou-95129
+  script: docker run --rm -e HEROKU_API_KEY=$HEROKU_PASSWORD registry.heroku.com/rocky-bayou-95129 container:release web --app rocky-bayou-95129
   on:
     branch: master
