Travis to heroku only production image push try

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   #   - docker build -t yadhus/docker-simple -f Dockerfile.dev .
   - curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
   - docker login --username=$HEROKU_EMAIL --password=$HEROKU_PASSWORD registry.heroku.com
+  - heroku login
 
 # script:
 #   - docker run -e CI=true yadhus/docker-simple npm run test
